# GThaCk

./: .gitignore  README.md  pyproject.toml
gthack/: gtcFuncs.py
gthack/modules/: getIntensities.py  getSampleInfo.py  manipulateGTC.py  sampleSheet.py  write_gtc.py
singularity/: CCPM_Biobank_Freeze_and_Clinical_Validation_Software_v0.1.0_07192020.txt
